feat: plus minus effect is done

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main>
-        <li><a href="test1.html">Test 1</a></li>
+        <li><a href="./tests/plus_minus_effect/plus_minus_effect.html">Plus minus effect</a></li>
     </main>
 	<script src="index.js"></script>
   </body>
