--- a/tests/plus_minus_effect/plus_minus_effect.html
+++ b/tests/plus_minus_effect/plus_minus_effect.html
@@ -15,6 +15,10 @@
         <li><a href="task4.html">Task 4</a></li>
         <li><a href="task5.html">Task 5</a></li>
         <li><a href="task6.html">Task 6</a></li>
+        <li><a href="task7.html">Task 7</a></li>
+        <li><a href="task8.html">Task 8</a></li>
+        <li><a href="task9.html">Task 9</a></li>
+        <li><a href="task10.html">Task 10</a></li>
     </main>
 	<script src="index.js"></script>
   </body>
