fix: link to the second test

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <main>
         <li><a href="./tests/plus_minus_effect/plus_minus_effect.html">Plus minus effect</a></li>
-        <li><a href="./tests/plus_minus_effect/alisa_hw2">Plus minus effect + calc + procrust (Alisa hw2)</a></li>
+        <li><a href="./tests/pm_calc_pr/pm_calc_pr.html">Plus minus effect + calc + procrust (Alisa hw2)</a></li>
     </main>
 	<script src="index.js"></script>
   </body>
