--- a/tests/pm_calc_pr/task10.html
+++ b/tests/pm_calc_pr/task10.html
@@ -8,10 +8,10 @@
     <body>
         <main>
             <form>
-                <input id="boxbox210" class="text-box" type="text" name="answerbox210" onSubmit="checker(this.form, 'boxbox210')">
-                <input type="submit" value="Проверка" onClick="checker(this.form, 'boxbox210')">
-                <br><label id="boxbox210-wrong-answer">Неверный ответ</label>
-                <script>update_box_style("boxbox210", "rgb(161, 255, 21)")</script>
+                <input id="box210" class="text-box" type="text" name="answer210" onSubmit="checker(this.form, 'box210')">
+                <input type="submit" value="Проверка" onClick="checker(this.form, 'box210')">
+                <br><label id="box210-wrong-answer">Неверный ответ</label>
+                <script>update_box_style("box210", "rgb(161, 255, 21)")</script>
             </form>
         </main>
     </body>
