--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="utf-8">
   <title>Стили</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="42/style.css">
  </head>
  <body>
    <div id="inner" class="heart">&#x2665;</div>
